<resources>
    <string name="app_name">Ambroise</string>
    <string name="go_back">Go back</string>
    <string name="image_auth">Image Auth</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="logo_edit_name">Logo Edit Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_attention"><![CDATA[By signing up, you’re agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="register">Register</string>
    <string name="account_already">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dont_account">Don\'t have account? Sign Up</string>
    <string name="loading">Loading</string>
    <string name="cd_search">Search</string>
    <string name="search_hint">Mau cukur di barbershop mana nih?</string>
    <string name="hello_home">Hello, Irza!</string>
    <string name="cd_message">Message</string>
    <string name="cd_notification">Notification</string>
    <string name="home_desc">Pangkas rambutmu, keluarkan kharisma mu!</string>
    <string name="cd_scissor">Scissor</string>
    <string name="barber_terdekat">Barber Terdekat</string>
    <string name="trending_style">Trending Style</string>
    <string name="semua_barbershop">Semua Barbershop</string>
    <string name="terlaris">Terlaris</string>
    <string name="promo_untuk_anda">Promo untuk anda</string>
    <string name="barbershop_di_sekitar_anda">Barbershop di sekitar anda</string>
    <string name="see_all">See all</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="account">Account</string>
    <string name="cd_barbershop">Barbershop</string>
    <string name="trending_haircut">Trending Haircut</string>
    <string name="cd_image_slide">Image Slide</string>
    <string name="dummy_barber">Shinjuku Hair Make</string>
    <string name="dummy_address">Jl. Niaga Gapura, Lontar, Kec. Sambikerep, Kota Surabaya, Jawa Timur</string>
    <string name="dummy_clock">Sun - Sat 08.00 AM - 21.00 PM</string>
    <string name="description">Description</string>
    <string name="detail_desc">Merupakan salah asatu salon terbaik di Surabaya dimana disalon ini kita bisa melakukan beragam perawatan. dI Shinjuku Hair Make ini kita bisa melakukan perawatan hair coloring, hair cut dan lainnya. Selain itu, pemilik salon ini juga pernah menggelar hair show bersama produk Matrix Professional.</string>
    <string name="facilities">Facilities</string>
    <string name="review">Review</string>
    <string name="dummy_rating">4.8</string>
    <string name="dummy_sum_review">(99 Reviews)</string>
    <string name="book_now">Book Now!</string>
    <string name="dummy_facilities">Hair Coloring</string>
    <string name="dummy_user">Utara Setya</string>
    <string name="dummy_date">Apr 20, 2022</string>
    <string name="cd_ellipse">Ellipse</string>
    <string name="dummy_detail_review">Layanan sangat bagus, pegawai sangat ramah dan hasil memuaskan. Thank you Shinjuku!</string>
    <string name="cd_back">Back</string>
    <string name="all">All</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="rating">Rating</string>
    <string name="dummy_notif_title">Booking Successful!</string>
    <string name="cd_notif">Image Notif</string>
    <string name="dummy_notif_detail">Angga Salon booking was successful!</string>
    <string name="dummy_message">Baik, kami tunggu kedatangannya</string>
    <string name="dummy_user_message">Angga Salon</string>
    <string name="dummy_date_message">Apr 15</string>
    <string name="cd_bookmark">Bookmark</string>
    <string name="dummy_promo">50% OFF Cuci Potong disetiap hari Senin di Moz Salon</string>
    <string name="cd_promo">Promo image</string>
    <string name="get_now">Get Now!</string>
    <string name="dummy_number">978</string>
    <string name="dummy_desc_haircut">Potongan seperti tentara, bikin cewe kesemsem dah soaln....</string>
    <string name="dummy_haircut">Buzz Cut</string>
    <string name="dummy_distance">7,0 km</string>
    <string name="dummy_rating_and_sum">4.8 (223)</string>
    <string name="Rating">cd_rating</string>
    <string name="cd_location">Location</string>
    <string name="dummy_schedule">Sun 15.00 PM - 17.00 PM</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="view_ticket">View Ticket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_booking">My Booking</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="booking">Booking</string>
    <string name="next">Next</string>
    <string name="progress_book">Progress Book</string>
    <string name="what_service_will_you_choose">What service will you choose?</string>
    <string name="guest">Guest</string>
    <string name="bill">Bill</string>
    <string name="dummy_bill">Rp. 250.000</string>
    <string name="booking_types">Booking Types</string>
    <string name="book_a_visit">Book a Visit</string>
    <string name="choice_of_service_time">Choice of service time</string>
    <string name="dummy_datetime">10 August 2022, 2 PM</string>
    <string name="service">Service</string>
    <string name="dummy_service">Hair Coloring + Creambath</string>
    <string name="additional_cost">Additional Cost</string>
    <string name="dummy_cost">Rp. 0</string>
    <string name="total">Total</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sun">Sun</string>
    <string name="august">August</string>
    <string name="cd_image_payment">Image Payment</string>
    <string name="image_radio_selection">Image radio selection</string>
    <string name="digital_payment">Digital Payment</string>
    <string name="automatically_checked">Automatically Checked</string>
    <string name="no_rekening">No. Rekening</string>
    <string name="dummy_rek">08113552304</string>
    <string name="pay_within">Pay within 1 x 24 hours. If you wouldn’t pay, the transaction will be forfeited.</string>
    <string name="copy">Copy</string>
    <string name="instructions">Instructions</string>
    <string name="dummy_transfer_instructions">1. Open the OVO application then select the Transfer menu. \n2. Select to fellow ovo\n3. Input the recipient\'s OVO phone number, then input the amount of money to be sent. If everything is filled, tap Continue.\n4. Then check again whether the recipient number and the amount sent is correct or not, if correct, tap the Transfer button.</string>
    <string name="transaction">Transaction</string>
    <string name="cd_success">Image Success</string>
    <string name="successful_transaction">Successful Transaction</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="dummy_transaction_date">03-01-2022 17:19:20</string>
    <string name="reference_number">Reference Number</string>
    <string name="dummy_ref_number">#14524569854587</string>
    <string name="dummy_name">Anatasia Griselda</string>
    <string name="dummy_phone">+62 811 355 2304</string>
    <string name="phone_number">Phone Number</string>
    <string name="salon_name">Salon Name</string>
    <string name="dummy_salon">Angga Salon</string>
    <string name="address">Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="ovo">Ovo</string>
    <string name="payment">Payment</string>
    <string name="ticket">Ticket</string>
    <string name="cd_qr_code">Qr Code</string>
    <string name="show_ticket">Show this ticket to the salon you have booked</string>
    <string name="booking_date">Booking Date</string>
    <string name="dummy_choice_time">03-01-2022 15:00:00</string>
    <string name="booked">Booked</string>
    <string name="status">Status</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="available_slots">Available Slots</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bank_information">Bank Information</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="others">Others</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="logout">Logout</string>
    <string name="not_get_permission">Not getting permission</string>
    <string name="failed_camera">Failed to show camera</string>
    <string name="rotate_camera">Rotate camera</string>
    <string name="close">Close</string>
    <string name="messages">Messages</string>
    <string name="cd_image_user">Image User</string>
    <string name="search_people_or_message">Search people or message</string>
    <string name="barbershop_terdekat">Barbershop Terdekat</string>
    <string name="search_here">Search Here</string>
    <string name="fill_your_data">Fill your data</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <string name="update">Update</string>
</resources>