<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_32">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/spacing_8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_back"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/payment"
                android:textSize="@dimen/font_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_18"
                android:layout_marginEnd="@dimen/spacing_18"
                android:elevation="@dimen/spacing_4"
                android:padding="@dimen/spacing_20">

                <ImageView
                    android:id="@+id/imgPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_20"
                    android:layout_marginHorizontal="@dimen/spacing_20"
                    android:layout_marginVertical="@dimen/spacing_12"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cd_image_payment"
                    android:src="@drawable/ovo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/automatically_checked"
                android:textColor="@color/gray_darker"
                android:textSize="@dimen/font_12" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/no_rekening" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_12"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvRekening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_20"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/dummy_rek"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_copy"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/spacing_24"
                android:paddingVertical="@dimen/spacing_4"
                android:text="@string/copy"
                android:textAllCaps="true"
                android:textColor="@color/whiter" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:layout_marginBottom="@dimen/spacing_16"
            android:includeFontPadding="false"
            android:text="@string/pay_within"
            android:textSize="@dimen/font_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginBottom="@dimen/spacing_12"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_transfer_instructions"
            android:textSize="@dimen/font_11"
            android:id="@+id/tvInstruction"
            android:fontFamily="@font/poppins_light"/>

    </LinearLayout>


</LinearLayout>