<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_32"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/go_back"
        android:focusable="true"
        android:src="@drawable/ic_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12"
        android:contentDescription="@string/image_auth"
        android:src="@drawable/ic_logo_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/sign_up"
        android:textSize="@dimen/font_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_auth" />

    <ImageView
        android:id="@+id/img_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_edit_name"
        android:src="@drawable/ic_person_circle"
        app:layout_constraintBottom_toBottomOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_20"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_person"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/img_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_edit_name"
        android:src="@drawable/ic_envelope"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_12"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_mail"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <ImageView
        android:id="@+id/img_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_edit_name"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_password" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_12"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_mail"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_26"
        android:text="@string/register_attention"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:background="@drawable/bg_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/whiter"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_account_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:focusable="true"
        android:text="@string/account_already"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>